# agent-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README  TESTING_README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: conftest.py  main.py
backend/app/core/: agent_config.py  logging.py  router_loader.py  settings.py
backend/app/core/db/: model_registry.py  session.py
backend/app/core/tests/: test_agent_config.py  test_execution_target_health.py  test_execution_target_repository.py  test_execution_target_router.py  test_execution_target_routing.py  test_logging.py  test_router_loader.py  test_settings.py
backend/app/features/health/: router.py  schemas.py  service.py
backend/app/features/orchestration/: dependencies.py  models.py  platform_bridge.py  repository.py  router.py  schemas.py  service.py
backend/app/features/system/: models.py
backend/app/integrations/control_hub/: client.py  contract.py  openapi_snapshot.json
backend/app/platform/: __init__.py
backend/app/projections/: __init__.py
backend/config/: agents.yaml
backend/migrations/: env.py
backend/migrations/versions/: 20260331_000001_add_orchestration_runs.py  20260331_000002_add_orchestration_source_metadata.py  20260409_000003_add_platform_primitives.py  20260409_000004_add_execution_targets_and_jobs.py  20260413_000005_soft_delete_execution_targets.py  20260417_000006_add_run_idempotency_key.py  20260418_000007_add_agent_catalog_config_store.py  20260421_000008_add_backend_model_config.py
config/: agents.yaml
(+148 files in other folders)
