[project]
name = "service-template-backend"
version = "0.1.0"
description = "Backend-only FastAPI service template"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "pydantic-settings>=2.13.1",
    "psycopg[binary]>=3.3.3",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.21.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "ruff>=0.15.2",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", ".venv", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"**/migrations/env.py" = ["E402"]
"app/features/orchestration/dependencies.py" = ["B008"]
"app/features/orchestration/router.py" = ["B008"]
"app/platform/*/router.py" = ["B008"]
"app/projections/*/router.py" = ["B008"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["app"]
pythonpath = ["."]
